# haplmate

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: release.yml
analysis/: README.md  haplotype_post_analysis.ipynb  pyproject.toml
src/: main.rs
tests/: cli.rs  createSimData.py  createSimDataPremadeFreq.py
tests/data/: hapFreqs_og.csv  sampleFrequencies.csv  sampleHaps.aln2  sample_haplotypes.fa  simulated_haplotype_frequencies.csv
