[package]
name = "haplmate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["ndarray_latest", "nalgebra_latest"] }
clap = { version = "4.5.21", features = ["derive"] }
seq_io = "0.3.2"
tempfile = "3.15.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
